# c-libraries-training

1Basis/: CMakeLists.txt
1Basis/src/: main.c  main.h  status.c  status.h
raylib/: Readme.md
raylib/1Basis/: CMakeLists.txt
raylib/1Basis/src/: main.c  main.h
raylib/2dash/: CMakeLists.txt
raylib/2dash/levels/: 1_Beginner.txt  2_Intermediant.txt  2_Intermediate.txt  3_Hard.txt  3_Hardcore.txt
raylib/2dash/src/: assets.h  game.c  game.h  level.c  level.h  main.c  screen.c  screen.h  screens.c  screens.h
raylib/2dash/src/objects/: player.c  player.h
raylib/3platformer/: CMakeLists.txt  config.txt
raylib/3platformer/levels/: 1_first_level.txt  2_second_level.txt  3_third_level.txt  first_level.txt
raylib/3platformer/src/: config.c  config.h  helpers.c  helpers.h  level.c  level.h  main.c  screen.c  screen.h
raylib/3platformer/src/level/: background.c  background.h  enemy.c  enemy.h  platform.c  platform.h  player.c  player.h  surface.c  surface.h  victory.c  victory.h
raylib/4fighting/: CMakeLists.txt
raylib/4fighting/assets/: aya.psd  ayaya.psd  sakuyaya.psd
raylib/4fighting/src/: battle.c  battle.h  collision.c  collision.h  common.h  fighter.c  fighter.h  game.c  game.h  main.c  resources.c  resources.h  storage.c  storage.h
raylib/4fighting/src/battle/: player.c  player.h
raylib/4fighting/src/screens/: logo.c  (+12 more)
raylib/4fighting/v1/: CMakeLists.txt
raylib/5action-adventure/src/: common.h  game.c  game.h  level.c  level.h  player.c  player.h  textures.c  textures.h  tile.c  tile.h
raylib/test/src/: main.c
sdl/1Basis/src/: main.c  main.h
(+31 files in other folders)
